[project]
name = "super-robot"
version = "0.1.0"
description = "3vs3 Medarot-style Tactical Simulator built with Django"
requires-python = ">=3.11"
dependencies = [
    "django>=4.2,<5.0",
    "pydantic>=2.0",
    "djangorestframework>=3.14",
    "pandas>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["battle"]

[tool.uv]
dev-dependencies = []
